# modrinth-cli

./: README.md  pyproject.toml
src/modrinth_cli/: __init__.py  exceptions.py  resolver.py
