[project]
name = "modrinth-cli"
version = "0.1.0"
description = "Resolve and download Modrinth dependencies for Minecraft."
readme = "README.md"
authors = [
    { name = "AmirAli Mollaei", email = "me.amiralimollaei@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.1",
]

[project.scripts]
modrinth-cli = "modrinth_cli:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
